--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" name="guess" class="guess">
         <button class="submit">Check</button>
         <p class="guessed">Numbers Guessed : </p>
-        <h3 class="low">Your Guesses Number is Lower</h3>
+        <h3 class="low">Your Guessed Number is Lower</h3>
         <h3 class="high">Your Guessed Number is Higher</h3>
         <p class="result">Congratulations! You've Guessed the correct answer</p>
         <p class="wrong">Try Again! You've Guessed wrong</p>
